--- a/index.html
+++ b/index.html
@@ -3,39 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>ReactJS Choice Multilist</title>
-  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+  <!-- <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"> -->
 
-  <style>
-    .list-variants,
-    .list-selected {
-      border-left: 1px solid #efefef;
-      border-right: 1px solid #efefef;
-      line-height: 30px;
-    }
-    
-    .list-item {
-      cursor: pointer;
-      padding: 10px;
-      border-bottom: 1px solid #efefef;
-    }
-
-    .list-item:first-child {
-      border-top: 1px solid #efefef;
-    }
-
-    .list-item > .fa {
-      width: 23px;
-    }
-
-    #app {
-      margin: 30px 0;
-    }
-
-    #app .fa {
-      padding-right: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="./app/dist/css/main.css">
 </head>
 <body>
   <div class="container">
