--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ReactJS Choice Multilist</title>
-  <!-- <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
-  <!-- <link rel="stylesheet" href="./node_modules/font-awesome/css/font-awesome.min.css"> -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./app/dist/css/main.css">
 </head>
 <body>
