--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <h1 class="page-header">ReactJS Choice Multilist</h1>
-      </div>
-    </div>
+  <div class="RCMContainer">
+    <h1>ReactJS Choice Multilist</h1>
+    <div id="app"></div>
   </div>
 
-  <div id="app"></div>
   <script src="./app/dist/js/app.js"></script>
 </body>
 </html>
